--- a/PEC1_Ej2_3/style.css
+++ b/PEC1_Ej2_3/style.css
@@ -16,11 +16,11 @@ body {
   margin: 0;
 }
 
-.movie-container {
+.movie-container, .currency-container {
   margin: 20px 0;
 }
 
-.movie-container select {
+.movie-container select, .currency-container select {
   background-color: #fff;
   border: 0;
   border-radius: 5px;
